--- a/template/css/_partials.sass
+++ b/template/css/_partials.sass
@@ -1,6 +1,10 @@
-$rgbaBlue: rgba(72, 132, 179, .7)
-$rgbaGreen: rgba(144, 236, 146, .7)
-$rgbaBlack: rgba(0, 0, 0, .5)
+$rgbaBlueTrans: rgba(72, 132, 179, .7)
+$rgbaGreenTrans: rgba(144, 236, 146, .7)
+$rgbaBlackTrans: rgba(0, 0, 0, .5)
+
+$rgbaBlue: rgb(72, 132, 179)
+$rgbaGreen: rgb(144, 236, 146)
+$rgbaBlack: rgb(0, 0, 0)
 
 /*defaulr colors*/
 $seagreen: seagreen
