--- a/template/index.html
+++ b/template/index.html
@@ -173,6 +173,216 @@
                         </div>
                     </div>
                 </div>
+                <div class="col s12 l4">
+                    <div class="card wow fadeInUp">
+                        <div class="card-image">
+                            <img src="image/2.jpg">
+                            <span class="card-title">A title for this event</span>
+                            <a class="btn-floating activator halfway-fab waves-effect waves-light red tooltipped"
+                               data-position="bottom" data-tooltip="share">
+                                <i class="material-icons">share</i>
+                            </a>
+                        </div>
+                        <div class="card-content">
+                            <p><i class="material-icons f15">schedule</i> Sat, Nov 25 8:00am</p>
+                            <div>
+                                <i class="material-icons f15">location_on</i> Muson center, Lagos
+                                <i class="material-icons dropdown-button right pointer" data-activates="dropdown1">more_vert</i>
+                                <!-- Dropdown Structure -->
+                                <ul id="dropdown1" class="dropdown-content">
+                                    <li>
+                                        <a href="#add_event_modal" class="modal-trigger">Edit</a>
+                                    </li>
+                                    <li>
+                                        <a href="#!">Delete</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="card-reveal">
+                            <span class="card-title grey-text text-darken-4"><a>A title for this event</a><i
+                                    class="material-icons right">close</i></span>
+                            <small>Here is some more information about this product that is only revealed once clicked
+                                on.
+                            </small>
+                        </div>
+                    </div>
+                </div>
+                <div class="col s12 l4">
+                    <div class="card wow fadeInUp">
+                        <div class="card-image">
+                            <img src="image/2.jpg">
+                            <span class="card-title">A title for this event</span>
+                            <a class="btn-floating activator halfway-fab waves-effect waves-light amber tooltipped"
+                               data-position="bottom" data-tooltip="share">
+                                <i class="material-icons">share</i>
+                            </a>
+                        </div>
+                        <div class="card-content">
+                            <p><i class="material-icons f15">schedule</i> Sat, Nov 25 8:00am</p>
+                            <div>
+                                <i class="material-icons f15">location_on</i> Muson center, Lagos
+                                <i class="material-icons dropdown-button right pointer" data-activates="dropdown2">more_vert</i>
+                                <!-- Dropdown Structure -->
+                                <ul id="dropdown2" class="dropdown-content">
+                                    <li>
+                                        <a href="#add_event_modal" class="modal-trigger">Edit</a>
+                                    </li>
+                                    <li>
+                                        <a href="#!">Delete</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="card-reveal">
+                            <span class="card-title grey-text text-darken-4"><a>A title for this event</a><i
+                                    class="material-icons right">close</i></span>
+                            <small>Here is some more information about this product that is only revealed once clicked
+                                on.
+                            </small>
+                        </div>
+                    </div>
+                </div>
+                <div class="col s12 l4">
+                    <div class="card wow fadeInUp">
+                        <div class="card-image">
+                            <img src="image/2.jpg">
+                            <span class="card-title">A title for this event</span>
+                            <a class="btn-floating activator halfway-fab waves-effect waves-light green tooltipped"
+                               data-position="bottom" data-tooltip="share">
+                                <i class="material-icons">share</i>
+                            </a>
+                        </div>
+                        <div class="card-content">
+                            <p><i class="material-icons f15">schedule</i> Sat, Nov 25 8:00am</p>
+                            <div>
+                                <i class="material-icons f15">location_on</i> Muson center, Lagos
+                                <i class="material-icons dropdown-button right pointer" data-activates="dropdown3">more_vert</i>
+                                <!-- Dropdown Structure -->
+                                <ul id="dropdown3" class="dropdown-content">
+                                    <li>
+                                        <a href="#add_event_modal" class="modal-trigger">Edit</a>
+                                    </li>
+                                    <li>
+                                        <a href="#!">Delete</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="card-reveal">
+                            <span class="card-title grey-text text-darken-4"><a>A title for this event</a><i
+                                    class="material-icons right">close</i></span>
+                            <small>Here is some more information about this product that is only revealed once clicked
+                                on.
+                            </small>
+                        </div>
+                    </div>
+                </div>
+                <div class="col s12 l4">
+                    <div class="card wow fadeInUp">
+                        <div class="card-image">
+                            <img src="image/2.jpg">
+                            <span class="card-title">A title for this event</span>
+                            <a class="btn-floating activator halfway-fab waves-effect waves-light red tooltipped"
+                               data-position="bottom" data-tooltip="share">
+                                <i class="material-icons">share</i>
+                            </a>
+                        </div>
+                        <div class="card-content">
+                            <p><i class="material-icons f15">schedule</i> Sat, Nov 25 8:00am</p>
+                            <div>
+                                <i class="material-icons f15">location_on</i> Muson center, Lagos
+                                <i class="material-icons dropdown-button right pointer" data-activates="dropdown1">more_vert</i>
+                                <!-- Dropdown Structure -->
+                                <ul id="dropdown1" class="dropdown-content">
+                                    <li>
+                                        <a href="#add_event_modal" class="modal-trigger">Edit</a>
+                                    </li>
+                                    <li>
+                                        <a href="#!">Delete</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="card-reveal">
+                            <span class="card-title grey-text text-darken-4"><a>A title for this event</a><i
+                                    class="material-icons right">close</i></span>
+                            <small>Here is some more information about this product that is only revealed once clicked
+                                on.
+                            </small>
+                        </div>
+                    </div>
+                </div>
+                <div class="col s12 l4">
+                    <div class="card wow fadeInUp">
+                        <div class="card-image">
+                            <img src="image/2.jpg">
+                            <span class="card-title">A title for this event</span>
+                            <a class="btn-floating activator halfway-fab waves-effect waves-light amber tooltipped"
+                               data-position="bottom" data-tooltip="share">
+                                <i class="material-icons">share</i>
+                            </a>
+                        </div>
+                        <div class="card-content">
+                            <p><i class="material-icons f15">schedule</i> Sat, Nov 25 8:00am</p>
+                            <div>
+                                <i class="material-icons f15">location_on</i> Muson center, Lagos
+                                <i class="material-icons dropdown-button right pointer" data-activates="dropdown2">more_vert</i>
+                                <!-- Dropdown Structure -->
+                                <ul id="dropdown2" class="dropdown-content">
+                                    <li>
+                                        <a href="#add_event_modal" class="modal-trigger">Edit</a>
+                                    </li>
+                                    <li>
+                                        <a href="#!">Delete</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="card-reveal">
+                            <span class="card-title grey-text text-darken-4"><a>A title for this event</a><i
+                                    class="material-icons right">close</i></span>
+                            <small>Here is some more information about this product that is only revealed once clicked
+                                on.
+                            </small>
+                        </div>
+                    </div>
+                </div>
+                <div class="col s12 l4">
+                    <div class="card wow fadeInUp">
+                        <div class="card-image">
+                            <img src="image/2.jpg">
+                            <span class="card-title">A title for this event</span>
+                            <a class="btn-floating activator halfway-fab waves-effect waves-light green tooltipped"
+                               data-position="bottom" data-tooltip="share">
+                                <i class="material-icons">share</i>
+                            </a>
+                        </div>
+                        <div class="card-content">
+                            <p><i class="material-icons f15">schedule</i> Sat, Nov 25 8:00am</p>
+                            <div>
+                                <i class="material-icons f15">location_on</i> Muson center, Lagos
+                                <i class="material-icons dropdown-button right pointer" data-activates="dropdown3">more_vert</i>
+                                <!-- Dropdown Structure -->
+                                <ul id="dropdown3" class="dropdown-content">
+                                    <li>
+                                        <a href="#add_event_modal" class="modal-trigger">Edit</a>
+                                    </li>
+                                    <li>
+                                        <a href="#!">Delete</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="card-reveal">
+                            <span class="card-title grey-text text-darken-4"><a>A title for this event</a><i
+                                    class="material-icons right">close</i></span>
+                            <small>Here is some more information about this product that is only revealed once clicked
+                                on.
+                            </small>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -247,12 +457,12 @@
                 </div>
                 <div class="row">
                     <div class="input-field col s6">
-                        <input id="date" type="date" class="validate" required>
-                        <label for="date"></label>
+                        <input id="startDate" type="date" class="validate" required>
+                        <label for="startDate"></label>
                     </div>
                     <div class="input-field col s6">
-                        <input id="time" type="time" class="validate" required>
-                        <label for="time"></label>
+                        <input id="endDate" type="date" class="validate" required>
+                        <label for="endDate"></label>
                     </div>
                 </div>
                 <div class="row">
