--- a/template/css/app.css
+++ b/template/css/app.css
@@ -30,7 +30,6 @@ nav {
   background-image: url("../image/logo.png");
   background-size: contain;
   background-repeat: no-repeat;
-  background-position: 60%;
   align-items: -100px; }
   .logo p {
     margin: 0;
@@ -83,6 +82,16 @@ nav {
 
 .carousel .carousel-item {
   visibility: inherit !important; }
+
+.relative {
+  position: relative !important; }
+
+.fixed {
+  position: fixed !important;
+  bottom: 0px;
+  z-index: 1;
+  height: 80px;
+  width: 70% !important; }
 
 [type="checkbox"] + label {
   position: relative;
@@ -176,6 +185,9 @@ nav {
   transition: border 0.25s, background-color 0.25s, width 0.2s 0.1s, height 0.2s 0.1s, top 0.2s 0.1s, left 0.2s 0.1s;
   z-index: 1; }
 
+input[type=range] {
+  margin: 40px 0 !important; }
+
 /*main css */
 .blur__fits {
   -webkit-filter: blur(3px) !important;
@@ -230,7 +242,7 @@ nav {
     width: 100%;
     height: 100%;
     background-image: url("../image/5.jpg");
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: black;
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover; }
@@ -275,8 +287,8 @@ nav {
   margin-top: 10px !important; }
 
 .gradient__bg {
-  background-image: linear-gradient(to left, rgba(72, 132, 179, 0.7), rgba(144, 236, 146, 0.7));
-  background-image: -webkit-linear-gradient(to left, rgba(72, 132, 179, 0.7), rgba(144, 236, 146, 0.7)); }
+  background-image: linear-gradient(to left, #4884b3, #90ec92);
+  background-image: -webkit-linear-gradient(to left, #4884b3, #90ec92); }
 
 .tabs .indicator {
   background-color: #e0f2f1;
