--- a/template/signin.html
+++ b/template/signin.html
@@ -29,10 +29,10 @@
     </nav>
     <!--End nav-->
 
-    <div class="signin__card_holdr">
+    <div class="signin__card_holdr wow fadeInUp">
         <div class="container">
             <div class="row">
-                <form class="col s12" id="signin-form">
+                <form class="col s12" id="signin-form" method="post" action="api/v1/users/signin">
                     <div class="row">
                         <div class="input-field col s12">
                             <input id="email" type="email" class="validate" required>
@@ -41,19 +41,17 @@
                     </div>
                     <div class="row">
                         <div class="input-field col s12">
-                            <input id="password" type="password" class="validate" minlength="6" required>
+                            <input id="password" type="password" class="validate" minlength="5" required>
                             <label for="password">Password</label>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="input-field col s6">
-                            <button class="btn btn-large btn-register waves-effect waves-light" type="submit" name="action">Sign In
-                                <i class="material-icons right">done</i>
-                            </button>
-                        </div>
+                        <div class="input-field col s12 center-align">
+                            <button class="btn col s12 gradient__bg btn-register waves-effect waves-light" type="submit" name="action">Sign In</button>
 
-                        <div class="input-field col s6 right-align">
-                            <a href="signup.html" title="sign up" class="ngl btn-floating btn-large waves-effect waves-light red"><i class="material-icons">input</i></a>
+                            <p class="center-align">
+                                <span>Don't Have an Account? Sign Up <a href="signup.html">here</a></span>
+                            </p>
                         </div>
                     </div>
                 </form>
