--- a/template/signup.html
+++ b/template/signup.html
@@ -23,16 +23,18 @@
         </div>
     </nav>
 
-    <div class="signin__card_holdr">
+    <div class="signin__card_holdr wow fadeInUp">
         <div class="container">
             <div class="row">
-                <form class="col s12" id="reg-form">
+                <form class="col s12" id="reg-form" method="post" action="api/v1/users">
                     <div class="row">
-                        <div class="input-field col s6">
+                        <div class="input-field col s12">
                             <input id="first_name" type="text" class="validate" required>
                             <label for="first_name">First Name</label>
                         </div>
-                        <div class="input-field col s6">
+                    </div>    
+                    <div class="row">
+                        <div class="input-field col s12">
                             <input id="last_name" type="text" class="validate" required>
                             <label for="last_name">Last Name</label>
                         </div>
@@ -50,14 +52,12 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="input-field col s6">
-                            <button class="btn btn-large btn-register waves-effect waves-light" type="submit" name="action">Register
-                                <i class="material-icons right">done</i>
-                            </button>
-                        </div>
-
-                        <div class="input-field col s6 right-align">
-                            <a href="signin.html" title="sign in" class="ngl btn-floating btn-large waves-effect waves-light red"><i class="material-icons">input</i></a>
+                        <div class="input-field col s12 center-align">
+                            <button class="col s12 btn waves-effect gradient__bg waves-light" type="submit" name="action">Register</button>
+                            
+                            <p class="center-align">
+                                <span>Already signed Up? Login <a href="signin.html">here</a></span>
+                            </p>
                         </div>
                     </div>
                 </form>
