change ui design modification

--- a/template/css/app.css
+++ b/template/css/app.css
@@ -27,7 +27,7 @@ nav {
 
 .logo {
   width: 250px;
-  background-image: url("../image/logo.png");
+  background-image: url("../image/logo2.png");
   background-size: contain;
   background-repeat: no-repeat;
   align-items: -100px; }
