--- a/template/css/overwrite/overwrite.sass
+++ b/template/css/overwrite/overwrite.sass
@@ -23,7 +23,7 @@ nav
 .logo
   width: 250px
   background:
-    image: url("../image/logo.png")
+    image: url("../image/logo2.png")
     size: contain
     repeat: no-repeat
   align-items: -100px
