--- a/template/css/overwrite/overwrite.sass
+++ b/template/css/overwrite/overwrite.sass
@@ -26,6 +26,7 @@ nav
     image: url("../image/logo2.png")
     size: contain
     repeat: no-repeat
+    position: 60%
   align-items: -100px
 
   p
@@ -40,7 +41,7 @@ nav
   cursor: pointer !important
 
 .search__results
-  width: 50%
+  width: 70%
   margin: 0 auto
 
 .bg__white
