--- a/template/css/app.css
+++ b/template/css/app.css
@@ -44,7 +44,7 @@ nav {
   cursor: pointer !important; }
 
 .search__results {
-  width: 50%;
+  width: 70%;
   margin: 0 auto; }
 
 .bg__white {
@@ -282,7 +282,7 @@ input[type=range] {
   columns: 2;
   column-gap: 10px; }
 
-/*signin css */
+/*authentication css */
 .input-field {
   margin: 0;
   margin-top: 10px !important; }
