--- a/template/signin.html
+++ b/template/signin.html
@@ -21,7 +21,7 @@
                 </a>
                 <!--<ul id="nav-mobile" class="right hide-on-med-and-down">-->
                     <!--<li><a href="#"><i class="material-icons">search</i></a></li>-->
-                    <!--<li><a href="signin.html">Sign In</a></li>-->
+                    <!--<li><a href="authentication.html">Sign In</a></li>-->
                     <!--<li><a href="signup.html">Sign Up</a></li>-->
                 <!--</ul>-->
             </div>
