--- a/client/public/css/app.css
+++ b/client/public/css/app.css
@@ -16,6 +16,9 @@
 .f__size {
   font-size: 20px !important; }
 
+.isLoading {
+  opacity: 0.5 !important; }
+
 nav {
   height: 55px !important;
   box-shadow: none !important;
