--- a/client/public/css/overwrite/overwrite.sass
+++ b/client/public/css/overwrite/overwrite.sass
@@ -7,6 +7,9 @@
 .f__size
   font-size: 20px !important
 
+.isLoading
+  opacity: .5 !important
+
 nav
   height: $height !important
   box-shadow: none !important
