feat: add center and fetch centers from API end-points.

--- a/client/public/css/app.css
+++ b/client/public/css/app.css
@@ -213,6 +213,14 @@ nav {
 input[type=range] {
   margin: 40px 0 !important; }
 
+.progress {
+  position: absolute !important;
+  top: 0;
+  left: 0;
+  margin: 0 !important;
+  height: 3px;
+  z-index: 1000; }
+
 /*main css */
 .blur__fits {
   -webkit-filter: blur(3px) !important;
