--- a/client/public/css/overwrite/overwrite.sass
+++ b/client/public/css/overwrite/overwrite.sass
@@ -221,3 +221,11 @@ nav
 
 input[type=range]
   margin: 40px 0 !important
+
+.progress
+  position: absolute !important
+  top: 0
+  left: 0
+  margin: 0 !important
+  height: 3px
+  z-index: 1000
