fix: center rendering fetched from API.

--- a/client/public/css/overwrite/overwrite.sass
+++ b/client/public/css/overwrite/overwrite.sass
@@ -222,10 +222,10 @@ nav
 input[type=range]
   margin: 40px 0 !important
 
-.progress
-  position: absolute !important
-  top: 0
-  left: 0
-  margin: 0 !important
-  height: 3px
-  z-index: 1000
+//.progress
+//  position: absolute !important
+//  top: 0
+//  left: 0
+//  margin: 0 !important
+//  height: 3px
+//  z-index: 1000
