--- a/client/public/css/media-query.sass
+++ b/client/public/css/media-query.sass
@@ -2,3 +2,15 @@
   /* For mobile phones: */
   .signin__card_holdr
     width: 100%
+
+@media #{$small-and-down}
+  .cards-container
+    @include column-count(1)
+
+@media #{$medium-and-up}
+  .cards-container
+    @include column-count(2)
+
+@media #{$large-and-up}
+  .cards-container
+    @include column-count(3)
