--- a/client/public/css/overwrite/overwrite.sass
+++ b/client/public/css/overwrite/overwrite.sass
@@ -1,3 +1,11 @@
+.cards-container
+  column-break-inside: avoid
+
+  .card
+    display: inline-block
+    overflow: visible
+    width: 100%
+
 .input-field
   margin-top: 0 !important
 
