--- a/client/public/css/overwrite/overwrite.sass
+++ b/client/public/css/overwrite/overwrite.sass
@@ -1,5 +1,7 @@
 .cards-container
-  column-break-inside: avoid
+  -webkit-column-break-inside: avoid
+  page-break-inside: avoid
+  break-inside: avoid
 
   .card
     display: inline-block
