change: made to event modal to use material-ui layout.

--- a/client/public/css/_partials.sass
+++ b/client/public/css/_partials.sass
@@ -6,11 +6,13 @@ $rgbaBlue: rgb(72, 132, 179)
 $rgbaGreen: rgb(144, 236, 146)
 $rgbaBlack: rgb(0, 0, 0)
 
-/*defaulr colors*/
+/*default colors*/
 $seagreen: seagreen
 $white: #fff
 $black: #000
 $transparent: transparent
+
+$steel_blue: #5A9EAB
 
 $height: 55px
 
