--- a/client/public/css/overwrite/overwrite.sass
+++ b/client/public/css/overwrite/overwrite.sass
@@ -1,3 +1,9 @@
+.toast
+  background-color: $steel_blue !important
+
+.steel_blue
+  background: $steel_blue
+
 .cards-container
   -webkit-column-break-inside: avoid
   page-break-inside: avoid
