--- a/client/public/css/main-css/main.sass
+++ b/client/public/css/main-css/main.sass
@@ -89,3 +89,9 @@
     color: #f5f5f5
   border:
     radius: 3px
+
+.small__duration
+  font-size: 12px !important
+  i
+    font:
+      size: 12px !important
